Refactor stream collection in `HandlerUtils` and remove redundant comment in `GameCommandService`.